--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fair Data Protocol smart contracts and its utilities",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bee:run": "./bee-factory/scripts/environment.sh start",
+    "bee:stop": "./bee-factory/scripts/environment.sh stop"
   },
   "repository": {
     "type": "git",
