--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "bee:run": "./bee-factory/scripts/environment.sh start",
     "bee:stop": "./bee-factory/scripts/environment.sh stop",
+    "compile": "npx hardhat compile",
     "deploy": "npx hardhat run --network localhost scripts/deploy.ts",
     "deploy:bee": "npx hardhat run --network bee scripts/deploy.ts"
   },
@@ -57,5 +58,8 @@
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "bee-factory": "github:ethersphere/bee-factory"
   }
 }
