--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,6 +3,8 @@ name: Build and publish image
 on:
   push:
     branches: [master]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
 
 env:
