ci: fix ci script

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,9 +8,9 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_PREFIX: 'docker.pkg.github.com/ethersphere/fdp-contracts'
-  BEE_ENV_PREFIX: ''
-  BLOCKCHAIN_VERSION: ''
+  IMAGE_PREFIX: 'docker.pkg.github.com/fairDataSociety/fdp-contracts'
+  BEE_ENV_PREFIX: 'swarm-test'
+  BLOCKCHAIN_VERSION: '1.2.0'
 
 jobs:
   build:
