--- a/js-library/package.json
+++ b/js-library/package.json
@@ -1,15 +1,19 @@
 {
   "name": "fdp-contracts-js",
   "version": "1.0.0",
-  "description": "Library for interaction with ENS contracts",
+  "description": "Library for interaction with FDS contracts",
   "main": "build/index.js",
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --watch --config webpack.build.config.ts",
+    "build": "webpack --config webpack.build.config.ts",
+    "test": "jest",
+    "test:unit": "jest ./test/unit",
+    "test:it": "jest ./test/it"
   },
   "keywords": [
-    "ens"
+    "contracts",
+    "ens",
+    "fdp"
   ],
   "types": "build/types/index.d.ts",
   "author": "",
@@ -29,6 +33,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "jest": "^27.5.1",
+    "json5-loader": "^4.0.1",
     "prettier": "^2.6.2",
     "terser-webpack-plugin": "^5.3.1",
     "ts-jest": "^27.1.4",
@@ -37,5 +42,8 @@
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "peerDependencies": {
+    "ethers": ">=5.6.4"
   }
 }
