--- a/js-library/.eslintrc.json
+++ b/js-library/.eslintrc.json
@@ -14,6 +14,7 @@
   "plugins": ["jest"],
   "rules": {
     "array-bracket-newline": ["error", { "multiline": true }],
+    "eol-last": ["error", "always"],
     "strict": ["error", "safe"],
     "block-scoped-var": "error",
     "complexity": "warn",
