--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,10 +5,12 @@ on:
     branches: [master]
     paths-ignore:
       - 'js-library/**'
+  pull_request:
+    branches: [master]
   workflow_dispatch:
 
 env:
-  IMAGE_PREFIX: 'docker.pkg.github.com/fairdatasociety/fdp-contracts'
+  IMAGE_PREFIX: 'hub.docker.com/orgs/fairdatasociety/repositories/fdp-contracts'
   BEE_ENV_PREFIX: 'swarm-test'
   BLOCKCHAIN_VERSION: '1.2.0'
 
@@ -33,11 +35,17 @@ jobs:
           echo "BLOCKCHAIN_VERSION=$BLOCKCHAIN_VERSION" >> $GITHUB_ENV
           echo "BEE_ENV_PREFIX=$BEE_ENV_PREFIX" >> $GITHUB_ENV
 
-      - name: Build and publish image
+      - name: Build image
         run: ./scripts/build-image.sh
+
+      - name: Publish image
+        run: docker push "$CONTRACTS_IMAGE_URL"
 
       - name: Commit new contract metadata
         run: |
           git add js-library/src/contracts/
           git commit -m "release: update contract metadata"
           git push origin master
+
+      # - name: Publish library
+      #   run: npm run build --prefix js-library
