fix: fix type checkings and bash variable usage

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Commit new contract metadata
         run: |
           git add js-library/src/contracts/
-          git commit -m "release: update contract metadata"
+          git commit -m "build: update contract metadata"
           git push origin master
 
       # - name: Publish library
