--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,9 +21,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Docker authentication
-        run: |
-          echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USER }} --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Install dependencies
         run: npm install
