--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "bee-factory": "github:ethersphere/bee-factory"
+    "@ethersphere/bee-factory": "2.0.0"
   }
 }
