--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -23,22 +23,16 @@ jobs:
         # a new release is created:
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Install dependencies
-        run: npm ci --prefix js-library
+      - run: npm ci --prefix js-library
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Test
-        run: |
-          cd js-library
-          ./scripts/test.sh
-          cd ..
+      - run: cd js-library && ./scripts/test.sh && cd ..
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Build
-        run: npm run build --prefix js-library
+      - run: npm run build --prefix js-library
+        if: ${{ steps.release.outputs.release_created }}
 
-      - name: Publish
-        run: npm publish --access public --prefix js-library
+      - run: npm publish --access public --prefix js-library
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
