--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           release-type: node
           package-name: "@fairdatasociety/fdp-contracts"
+          changelog-path: 'js-library/CHANGELOG.md'
 
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
