--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -26,18 +26,18 @@ jobs:
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
         # a new release is created:
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release }}
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: npm ci --prefix js-library
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release }}
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: cd js-library && ./scripts/test.sh && cd ..
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release }}
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: npm run build --prefix js-library
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release }}
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: npm publish --access public --prefix js-library
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release }}
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
