--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,28 +6,48 @@ on:
     paths-ignore:
       - 'js-library/**'
   workflow_dispatch:
+    inputs:
+      release:
+        description: 'Release new Docker image'
+        default: 'false'
 
 jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: google-github-actions/release-please-action@v3
+        id: release
+        with:
+          release-type: node
+          package-name: '@fairdatasociety/fdp-contracts'
+          bump-minor-pre-major: true
+
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+        # these if statements ensure that a publication only occurs when
+        # a new release is created:
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Install dependencies
         run: npm install
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Build image
         run: ./scripts/build-image.sh
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Publish image
         run: ./scripts/release-image.sh
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Commit new contract metadata
         uses: EndBug/add-and-commit@v9
@@ -36,3 +56,4 @@ jobs:
           author_email: actions@github.com
           message: 'build: update contract metadata'
           add: 'js-library/src/contracts/'
+        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
