--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "@fairdatasociety/bmt-js": "^2.0.1"
   },
   "dependencies": {
     "bee-factory": "github:ethersphere/bee-factory"
