--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/fairDataSociety/fdp-contracts#readme",
   "devDependencies": {
+    "@fairdatasociety/bmt-js": "^2.0.1",
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -57,10 +58,10 @@
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
-    "typescript": "^4.5.4",
-    "@fairdatasociety/bmt-js": "^2.0.1"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "bee-factory": "github:ethersphere/bee-factory"
+    "bee-factory": "github:ethersphere/bee-factory",
+    "bn.js": "^5.2.0"
   }
 }
