--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "bee-factory": "github:ethersphere/bee-factory",
-    "bn.js": "^5.2.0"
+    "bee-factory": "github:ethersphere/bee-factory"
   }
 }
