--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@ensdomains/buffer": "^0.0.13",
+    "@ensdomains/solsha1": "0.0.3",
+    "@openzeppelin/contracts": "^4.1.0",
     "bee-factory": "github:ethersphere/bee-factory",
     "dns-packet": "^5.3.1"
   }
