--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@ensdomains/buffer": "^0.0.13",
+    "@ensdomains/ens-contracts": "^0.0.11",
     "@ensdomains/solsha1": "0.0.3",
     "@openzeppelin/contracts": "^4.1.0",
     "bee-factory": "github:ethersphere/bee-factory",
