--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/fairDataSociety/fdp-contracts#readme",
   "devDependencies": {
+    "@ensdomains/ens-contracts": "^0.0.11",
     "@fairdatasociety/bmt-js": "^2.0.1",
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
