--- a/js-library/package.json
+++ b/js-library/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack --watch --config webpack.build.config.ts --env mode=development",
     "build": "webpack --config webpack.build.config.ts --env mode=production",
+    "deploy":"ts-node ./scripts/deploy.ts",
     "test": "jest",
     "test:unit": "jest ./test/unit",
     "test:integration": "jest ./test/it"
