--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "bee:run": "./bee-factory/scripts/environment.sh start",
     "bee:stop": "./bee-factory/scripts/environment.sh stop",
+    "test": "npx hardhat test",
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run --network localhost scripts/deploy.ts",
     "deploy:bee": "npx hardhat run --network bee scripts/deploy.ts",
