feat(contracts): FDS Registrar specs passing with fdp-play dev environment (#35)
* feat(contracts): WIP

* feat(contracts): updated deploy script

* feat(contracts): pending updating dev environmente with new deployment script

* feat: using fdp play at building image

* docs: add docker image build process

* feat(contracts): ENS with FDS registrar passing specs in fdp-play environment

* fix: ens registry compile

* docs: amend readme

* chore: add test npm script

* chore: contract interfaces

* docs: amend README for building docker images

* build: blockchain image version in scripts + latest build

* chore: add release:image npm script

* docs: amend js-library readme

Co-authored-by: Viktor Levente Tóth <toth.viktor.levente@gmail.com>

--- a/js-library/package.json
+++ b/js-library/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack --watch --config webpack.build.config.ts --env mode=development",
     "build": "webpack --config webpack.build.config.ts --env mode=production",
+    "deploy":"ts-node ./scripts/deploy.ts",
     "test": "jest",
     "test:unit": "jest ./test/unit",
     "test:integration": "jest ./test/it"
@@ -19,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@ensdomains/ens-contracts": "^0.0.11",
     "@babel/preset-typescript": "^7.16.7",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/jest": "^27.4.1",
