--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -15,6 +15,14 @@ on:
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    steps:
+      - uses: google-github-actions/release-please-action@v3
+        id: release
+        with:
+          release-type: node
+          path: js-library
+          package-name: "@fairdatasociety/fdp-contracts-js-lib"
+          changelog-path: 'js-library/CHANGELOG.md'
 
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
