--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -21,8 +21,9 @@ jobs:
         with:
           release-type: node
           path: js-library
-          package-name: "@fairdatasociety/fdp-contracts-js-lib"
+          package-name: "@fairdatasociety/fdp-contracts-js-library"
           changelog-path: 'js-library/CHANGELOG.md'
+          version-file: 'js-library/package.json'
 
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
