--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,11 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
+        if: ${{ github.event.inputs.release == 'true' }}
         id: release
         with:
           release-type: node
           package-name: '@fairdatasociety/fdp-contracts'
-          bump-minor-pre-major: true
 
   build:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
         if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Build image
