--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -17,11 +17,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
+        if: ${{ github.event.inputs.release == 'true' }}
         id: release
         with:
           release-type: node
-          package-name: "@fairdatasociety/fdp-contracts"
+          path: js-library
+          package-name: "@fairdatasociety/fdp-contracts-js-library"
           changelog-path: 'js-library/CHANGELOG.md'
+          version-file: 'js-library/package.json'
 
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
