--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -1,22 +1,16 @@
 name: Build and publish fdp-contract blockchain image
 
+# GH release doc https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#release
 on:
-  push:
-    branches: [master]
-    paths-ignore:
-      - 'js-library/**'
+  release:
+    types: [published]
   workflow_dispatch:
-    inputs:
-      release:
-        description: 'Release new Docker image'
-        default: 'false'
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
-        if: ${{ github.event.inputs.release == 'true' }}
         id: release
         with:
           release-type: node
@@ -26,32 +20,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        # these if statements ensure that a publication only occurs when
-        # a new release is created:
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Install dependencies
         run: npm ci
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Run the environment
         run: npm run env:start-base
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Build image
         run: ./scripts/build-image.sh
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Publish image
         run: ./scripts/release-image.sh
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - name: Commit new contract metadata
         uses: EndBug/add-and-commit@v9
@@ -60,4 +46,3 @@ jobs:
           author_email: actions@github.com
           message: 'fix: update contract metadata'
           add: 'js-library/src/contracts/'
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
