--- a/.github/workflows/publish-js-library.yml
+++ b/.github/workflows/publish-js-library.yml
@@ -1,16 +1,9 @@
 name: Build and publish JS library
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - 'js-library/**'
+  release:
+    types: [published]
   workflow_dispatch:
-    inputs:
-      release:
-        description: 'Release new NPM package'
-        default: 'false'
 
 jobs:
   release-please:
@@ -29,7 +22,6 @@ jobs:
       - uses: actions/checkout@v3
         # these if statements ensure that a publication only occurs when
         # a new release is created:
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - uses: actions/setup-node@v1
         with:
@@ -37,15 +29,11 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - run: npm ci --prefix js-library
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: cd js-library && npm run ci:test && cd ..
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: npm run build --prefix js-library
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
       - run: cd js-library && npm publish --access public && cd ..
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
