ci: add monorepo-tags

--- a/.github/workflows/release-pr-lib.yml
+++ b/.github/workflows/release-pr-lib.yml
@@ -1,5 +1,6 @@
 # On each new commit to master, create/update a PR with release
 # automatically bumps version and creates changelog as per conventional commits
+# https://github.com/google-github-actions/release-please-action
 name: Release Github
 
 on:
@@ -12,11 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
-        if: ${{ github.event.inputs.release == 'true' }}
         id: release
         with:
           release-type: node
           path: js-library
-          package-name: "@fairdatasociety/fdp-contracts-js-library"
+          package-name: "@fairdatasociety/fdp-contracts-js-lib"
           changelog-path: 'js-library/CHANGELOG.md'
           version-file: 'js-library/package.json'
+          pull-request-title-pattern: 'chore${scope}: release js-lib ${version}'
+          monorepo-tags: 'js-lib-'
