--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run --network localhost scripts/deploy.ts",
     "deploy:bee": "npx hardhat run --network bee scripts/deploy.ts",
-    "env:start-base": "fdp-play start --detach --blockchain-image fairdatasociety/fdp-play-blockchain 1.6.1",
+    "env:start-base": "fdp-play start --detach --blockchain-image fairdatasociety/fdp-play-blockchain --without-bees",
     "env:stop-base": "fdp-play stop",
     "build:image": "./scripts/build-image.sh",
     "release:image": "./scripts/release-image.sh"
@@ -65,6 +65,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@fairdatasociety/fdp-play": "^1.0.1"
+    "@fairdatasociety/fdp-play": "^2.0.0"
   }
 }
