ci(fix): monorepo-tags

--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -5,7 +5,7 @@ on:
   release:
     types: [published]
     tags-ignore:
-      - js-lib-*
+      - fdp-contracts-js-lib*
   workflow_dispatch:
 
 jobs:
