--- a/.github/workflows/release-pr-main.yml
+++ b/.github/workflows/release-pr-main.yml
@@ -15,6 +15,6 @@ jobs:
         id: release
         with:
           release-type: node
-          package-name: '@fairdatasociety/fdp-contracts'
+          package-name: 'fdp-contracts-main'
           pull-request-title-pattern: 'chore${scope}: release contracts ${version}'
-          monorepo-tags: 'main-'
+          monorepo-tags: true
