--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  publish-contracts:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
