--- a/js-library/package.json
+++ b/js-library/package.json
@@ -7,8 +7,8 @@
     "start": "webpack --watch --config webpack.build.config.ts --env mode=development",
     "build": "webpack --config webpack.build.config.ts --env mode=production",
     "deploy": "ts-node ./scripts/deploy.ts",
-    "env:start": "fdp-play start --detach --blockchain-image fairdatasociety/fdp-contracts-blockchain 1.6.1",
-    "env:stop": "fdp-play stop",
+    "env:start": "fdp-play start --detach --without-bees",
+    "env:stop": "fdp-play stop --rm",
     "ci:test": "npm run env:start && npm run build && npm run test && npm run env:stop",
     "test": "jest",
     "test:unit": "jest ./test/unit",
