ci: comment ci steps not needed for testing

--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -23,11 +23,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run the environment
-        run: npm run env:start-base
+      # Commented out just for test
+      # - name: Run the environment
+      #   run: npm run env:start-base
 
-      - name: Build image
-        run: ./scripts/build-image.sh
+      # - name: Build image
+      #   run: ./scripts/build-image.sh
 
       - name: Deploy to Goerli
         run: ./scripts/deploy.sh goerli
@@ -36,8 +37,8 @@ jobs:
           GOERLI_PRIVATE_KEY: ${{secrets.GOERLI_PRIVATE_KEY}}
         if: ${{ steps.release.outputs.release_created || github.event.inputs.release == 'true' }}
 
-      - name: Publish image
-        run: ./scripts/release-image.sh
+      # - name: Publish image
+      #   run: ./scripts/release-image.sh
 
       - name: Commit new contract metadata
         uses: EndBug/add-and-commit@v9
