--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run --network localhost scripts/deploy.ts",
-    "deploy:bee": "npx hardhat run --network bee scripts/deploy.ts",
+    "deploy:docker": "npx hardhat run --network docker scripts/deploy.ts",
     "deploy:goerli": "npx hardhat run --network goerli scripts/deploy.ts",
     "env:start-base": "fdp-play start --detach --fresh --blockchain-image fairdatasociety/fdp-play-blockchain --without-bees",
     "env:stop-base": "fdp-play stop",
