ci: testnet deployment (#64)
* ci: add deployment to goerli

* ci: comment ci steps not needed for testing

* ci: reorganize contract deployment scripts

* ci: ci scripts fixes

* feat(contract-upgrade): update contract metadata

* ci: fix error handling

* ci: fix error handling

* build: max interval env

* feat(contract-upgrade): update contract metadata

* ci: uncomment ci steps

Co-authored-by: CI <actions@github.com>
Co-authored-by: Viktor Levente Tóth <toth.viktor.levente@gmail.com>

--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Build image
         run: ./scripts/build-image.sh
 
+      - name: Deploy to Goerli
+        run: ./scripts/deploy.sh goerli
+        env:
+          GOERLI_URL: ${{secrets.GOERLI_URL}}
+          GOERLI_PRIVATE_KEY: ${{secrets.GOERLI_PRIVATE_KEY}}
+          MAX_INTERVAL: 100000
+
       - name: Publish image
         run: ./scripts/release-image.sh
 
