--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fdp-contracts",
+  "name": "@fairdatasociety/fdp-contracts",
   "version": "1.1.1",
   "description": "Fair Data Protocol smart contracts and its utilities",
   "main": "dist/index.js",
