--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -39,6 +39,14 @@ jobs:
           VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
           MAX_INTERVAL: 100000
 
+      - name: Deploy to Sepolia
+        run: ./scripts/deploy.sh sepolia
+        env:
+          GOERLI_URL: ${{secrets.SEPOLIA_URL}}
+          GOERLI_PRIVATE_KEY: ${{secrets.SEPOLIA_PRIVATE_KEY}}
+          VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
+          MAX_INTERVAL: 100000
+
       - name: Publish image
         run: ./scripts/release-image.sh
 
