--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "deploy:docker": "npx hardhat run --network docker scripts/deploy.ts",
     "deploy:goerli": "npx hardhat run --network goerli scripts/deploy.ts",
     "deploy:sepolia": "npx hardhat run --network sepolia scripts/deploy.ts",
+    "deploy:optimism_goerli": "npx hardhat run --network optimism_goerli scripts/deploy.ts",
+    "deploy:arbitrum_goerli": "npx hardhat run --network arbitrum_goerli scripts/deploy.ts",
     "env:start-base": "fdp-play start --detach --fresh --blockchain-image fairdatasociety/fdp-play-blockchain --without-bees",
     "env:stop-base": "fdp-play stop",
     "build:image": "./scripts/build-image.sh",
