feat: approximate gas price calculation

--- a/js-library/src/contracts/contracts-docker.env
+++ b/js-library/src/contracts/contracts-docker.env
@@ -3,3 +3,4 @@ DOCKER_FDS_REGISTRAR_ADDRESS=0xA94B7f0465E98609391C623d0560C5720a3f2D33
 DOCKER_PUBLIC_RESOLVER_ADDRESS=0xFC628dd79137395F3C9744e33b1c5DE554D94882
 DOCKER_DAPP_REGISTRY_ADDRESS=0x21a59654176f2689d12E828B77a783072CD26680
 DOCKER_RATINGS_ADDRESS=0xD86C8F0327494034F60e25074420BcCF560D5610
+DOCKER_GAS_ESTIMATION=268359
