--- a/js-library/src/contracts/contracts-sepolia.env
+++ b/js-library/src/contracts/contracts-sepolia.env
@@ -3,3 +3,4 @@ SEPOLIA_FDS_REGISTRAR_ADDRESS=0xFBF00389140C00384d88d458239833E3231a7414
 SEPOLIA_PUBLIC_RESOLVER_ADDRESS=0xC904989B579c2B216A75723688C784038AA99B56
 SEPOLIA_DAPP_REGISTRY_ADDRESS=0x79c97d8AF1B2fc95f4b5BE50Dbd33D5Ed127E854
 SEPOLIA_RATINGS_ADDRESS=0x2f5d8DD9799F777Be0D44B1c574B086382B125be
+SEPOLIA_GAS_ESTIMATION=268359
