--- a/js-library/src/contracts/contracts-goerli.env
+++ b/js-library/src/contracts/contracts-goerli.env
@@ -3,3 +3,4 @@ GOERLI_FDS_REGISTRAR_ADDRESS=0xF4C9Cd25031E3BB8c5618299bf35b349c1aAb6A9
 GOERLI_PUBLIC_RESOLVER_ADDRESS=0xbfeCC6c32B224F7D0026ac86506Fe40A9607BD14
 GOERLI_DAPP_REGISTRY_ADDRESS=0x0F2AAe814e78fC2c1C887D7aC62b5Ec627c325b3
 GOERLI_RATINGS_ADDRESS=0xdaaD6F1883Fbb887F0af78512f621241e9B5DE72
+GOERLI_GOERLI_ESTIMATION=268359
