chore: reverse registrar contract addresses

--- a/js-library/src/contracts/contracts-arbitrum_goerli.env
+++ b/js-library/src/contracts/contracts-arbitrum_goerli.env
@@ -3,4 +3,6 @@ ARBITRUM_GOERLI_FDS_REGISTRAR_ADDRESS=0x6E477cb842679F960c46DA924E041225791D9C3b
 ARBITRUM_GOERLI_PUBLIC_RESOLVER_ADDRESS=0xEEDbFFEC04E3d0D56F9ee71f6753f702F76d0f7B
 ARBITRUM_GOERLI_DAPP_REGISTRY_ADDRESS=0x835c0FeFcBCbeAEaBadfF611799B98053CB7f495
 ARBITRUM_GOERLI_RATINGS_ADDRESS=0xdDd98D8CAb74d39AD8BC6d432D7Ac7aDf619bA15
+ARBITRUM_GOERLI_REVERSE_RESOLVER_ADDRESS=0xa140e47C23F6765A2Da01C2b83558282228EBEbC
+ARBITRUM_GOERLI_NAME_RESOLVER_ADDRESS=0xA8e21DED417B74D3b2aFa715D04A4aBB065cEfB0
 ARBITRUM_GOERLI_GAS_ESTIMATION=268359
