--- a/js-library/src/contracts/contracts-goerli.env
+++ b/js-library/src/contracts/contracts-goerli.env
@@ -3,4 +3,6 @@ GOERLI_FDS_REGISTRAR_ADDRESS=0xF4C9Cd25031E3BB8c5618299bf35b349c1aAb6A9
 GOERLI_PUBLIC_RESOLVER_ADDRESS=0xbfeCC6c32B224F7D0026ac86506Fe40A9607BD14
 GOERLI_DAPP_REGISTRY_ADDRESS=0x0F2AAe814e78fC2c1C887D7aC62b5Ec627c325b3
 GOERLI_RATINGS_ADDRESS=0xdaaD6F1883Fbb887F0af78512f621241e9B5DE72
+GOERLI_REVERSE_RESOLVER_ADDRESS=0x145058EB31aE456362FEE44A54731beAB96e1c41
+GOERLI_NAME_RESOLVER_ADDRESS=0x8a3D1927E7E4E2C6B2f5B37A18B76eD24D16ff86
 GOERLI_GOERLI_ESTIMATION=268359
