Feat/reverse registrar (#157)
* feat: reverse registrar contract

* fix: reverse registrar contract

* test: reverse registrar

* feat: reverse registrar use in library

* ci: disable testnets deployment

* chore: reverse registrar contract addresses

* ci: fix docker vars

* feat(contract-upgrade): update contract metadata

* chore: fix contract addresses

* fix: library env vars

---------

Co-authored-by: CI <actions@github.com>

--- a/.github/workflows/publish-contracts.yml
+++ b/.github/workflows/publish-contracts.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Install dependencies
         run: npm ci
@@ -31,37 +31,38 @@ jobs:
       - name: Build image
         run: ./scripts/build-image.sh
 
-      - name: Deploy to Goerli
-        run: ./scripts/deploy.sh goerli
-        env:
-          GOERLI_URL: ${{secrets.GOERLI_URL}}
-          GOERLI_PRIVATE_KEY: ${{secrets.GOERLI_PRIVATE_KEY}}
-          VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
-          MAX_INTERVAL: 100000
+      # Publishing contracts to testnets locally for now
+      # - name: Deploy to Goerli
+      #   run: ./scripts/deploy.sh goerli
+      #   env:
+      #     GOERLI_URL: ${{secrets.GOERLI_URL}}
+      #     GOERLI_PRIVATE_KEY: ${{secrets.GOERLI_PRIVATE_KEY}}
+      #     VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
+      #     MAX_INTERVAL: 100000
 
-      - name: Deploy to Sepolia
-        run: ./scripts/deploy.sh sepolia
-        env:
-          SEPOLIA_URL: ${{secrets.SEPOLIA_URL}}
-          SEPOLIA_PRIVATE_KEY: ${{secrets.SEPOLIA_PRIVATE_KEY}}
-          VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
-          MAX_INTERVAL: 100000
+      # - name: Deploy to Sepolia
+      #   run: ./scripts/deploy.sh sepolia
+      #   env:
+      #     SEPOLIA_URL: ${{secrets.SEPOLIA_URL}}
+      #     SEPOLIA_PRIVATE_KEY: ${{secrets.SEPOLIA_PRIVATE_KEY}}
+      #     VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
+      #     MAX_INTERVAL: 100000
 
-      - name: Deploy to Optimism Goerli
-        run: ./scripts/deploy.sh optimism_goerli
-        env:
-          SEPOLIA_URL: ${{secrets.OPTIMISM_GOERLI_URL}}
-          SEPOLIA_PRIVATE_KEY: ${{secrets.OPTIMISM_GOERLI_PRIVATE_KEY}}
-          VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
-          MAX_INTERVAL: 100000
+      # - name: Deploy to Optimism Goerli
+      #   run: ./scripts/deploy.sh optimism_goerli
+      #   env:
+      #     SEPOLIA_URL: ${{secrets.OPTIMISM_GOERLI_URL}}
+      #     SEPOLIA_PRIVATE_KEY: ${{secrets.OPTIMISM_GOERLI_PRIVATE_KEY}}
+      #     VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
+      #     MAX_INTERVAL: 100000
 
-      - name: Deploy to Arbitrum Goerli
-        run: ./scripts/deploy.sh arbitrum_goerli
-        env:
-          SEPOLIA_URL: ${{secrets.ARBITRUM_GOERLI_URL}}
-          SEPOLIA_PRIVATE_KEY: ${{secrets.ARBITRUM_GOERLI_PRIVATE_KEY}}
-          VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
-          MAX_INTERVAL: 100000
+      # - name: Deploy to Arbitrum Goerli
+      #   run: ./scripts/deploy.sh arbitrum_goerli
+      #   env:
+      #     SEPOLIA_URL: ${{secrets.ARBITRUM_GOERLI_URL}}
+      #     SEPOLIA_PRIVATE_KEY: ${{secrets.ARBITRUM_GOERLI_PRIVATE_KEY}}
+      #     VALIDATOR_ADDRESS: '0xd27ffA0e47Fca8D3E757B4d2C408169859B8c419'
+      #     MAX_INTERVAL: 100000
 
       - name: Publish image
         run: ./scripts/release-image.sh
