chore: datahub addresses

--- a/js-library/src/contracts/contracts-optimism_goerli.env
+++ b/js-library/src/contracts/contracts-optimism_goerli.env
@@ -5,3 +5,4 @@ OPTIMISM_GOERLI_DAPP_REGISTRY_ADDRESS=0xfbf00389140c00384d88d458239833e3231a7414
 OPTIMISM_GOERLI_REVERSE_RESOLVER_ADDRESS=0xb4470F61b18C3A95Fb37c5b3286Fed8b1C662133
 OPTIMISM_GOERLI_NAME_RESOLVER_ADDRESS=0xaD6aEc82db057b19ad8e08ba59A11833c74417AF
 OPTIMISM_GOERLI_RATINGS_ADDRESS=0xdDd98D8CAb74d39AD8BC6d432D7Ac7aDf619bA15
+OPTIMISM_GOERLI_DATAHUB_ADDRESS=0x0C0C5847264B6624644676450300003c4B800a92
