--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:sepolia": "npx hardhat run --network sepolia scripts/deploy.ts",
     "deploy:optimism_goerli": "npx hardhat run --network optimism_goerli scripts/deploy.ts",
     "deploy:arbitrum_goerli": "npx hardhat run --network arbitrum_goerli scripts/deploy.ts",
+    "deploy:zkevm_testnet": "npx hardhat run --network zkevm_testnet scripts/deploy.ts",
     "env:start-base": "fdp-play start --detach --fresh --blockchain-image fairdatasociety/fdp-play-blockchain --without-bees",
     "env:stop-base": "fdp-play stop",
     "build:image": "./scripts/build-image.sh",
